tests/__snapshots__/feature-template-stderr.snap.txt
Error: Type 'number' is not identical to type 'string'.

  4 | });
  5 | test("is number a string?", () => {
  6 |   expect<number>().type.toBe<string>();
    |                              ~~~~~~
  7 | });
  8 | 

      at ./__typetests__/template.tst.ts:6:30 â­ is number a string?

